# strelnikova_homework_api

./: .env  conftest.py  pyproject.toml
helpers/: api_client.py  metods.py  urls.py
schemas/: list_resources.py  list_user.py
tests/: test_get_list_resources.py  test_get_lists_users.py  test_get_single_user.py  test_single_user.py  test_ui.py
