[tool.poetry]
name = "strelnikova-homework-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "strelnikova_homework_api"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.29.0"
pytest = "^7.3.1"
voluptuous = "^0.13.1"
pytest-voluptuous = "^1.2.0"
curlify = "^2.2.1"
allure-pytest = "^2.13.2"
selene = "^2.0.0rc2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = 1
log_level = "INFO"
addopts = " -s --clean-alluredir --alluredir=allure-results --allure-no-capture "